boreal/tests/assets/invalid_files/parsing/string_modifier_incompatible4.yar
// [error: string modifiers base64 and nocase are incompatible]
rule a {
    strings:
        $a = "a" base64 nocase
    condition:
        $a
}
